# any-stt

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/any-stt/: Cargo.toml
crates/any-stt/src/: config.rs  detect.rs  error.rs  hardware.rs  lib.rs  selector.rs
crates/any-stt/src/model/: family.rs  mod.rs  parakeet.rs  qwen_asr.rs  reazonspeech.rs  whisper.rs
crates/bench/: Cargo.toml
crates/bench/datasets/: default.json
crates/bench/src/: accuracy.rs  driver.rs  main.rs  manifest.rs  report.rs  shared.rs
crates/fastconformer-core/: Cargo.toml  README.md
crates/fastconformer-core/src/: config.rs  lib.rs  mel.rs
crates/fastconformer-core/src/encoder/: attention.rs  block.rs  conv_module.rs  ff.rs  mod.rs  ops.rs  subsample.rs
crates/fastconformer-core/tests/: layer_reference.rs
crates/gguf-loader/: Cargo.toml
crates/gguf-loader/src/: header.rs  lib.rs  metadata.rs  tensor.rs
crates/nnapi-backend/: Cargo.toml
crates/nnapi-backend/src/: context.rs  encoder.rs  lib.rs  loader.rs  types.rs
crates/parakeet-backend/: Cargo.toml
crates/parakeet-backend/src/: decoder.rs  encoder.rs  lib.rs
crates/qnn-backend/: Cargo.toml
crates/qnn-backend/src/: context.rs  encoder.rs  lib.rs  loader.rs  ops.rs  types.rs
crates/qnn-backend/tests/: qnn_matmul.rs  qnn_minimal.rs  qnn_probe.rs
crates/qwen-asr-backend/: Cargo.toml
crates/qwen-asr-backend/src/: lib.rs
crates/reazonspeech-backend/: Cargo.toml
crates/reazonspeech-backend/src/: config.rs  decoder.rs  encoder.rs  lib.rs  mel.rs  tokenizer.rs
crates/reazonspeech-backend/tests/: decoder_load.rs  encoder_ref_decode.rs
crates/whisper-backend/: Cargo.toml  build.rs
crates/whisper-backend/csrc/: shim.c
crates/whisper-backend/src/: decoder.rs  dlopen_ffi.rs  ffi.rs  helpers.rs  hybrid.rs  lib.rs  nnapi_hybrid.rs  preprocess.rs
crates/whisper-backend/src/qnn/: context.rs  loader.rs  mod.rs  types.rs
crates/whisper-backend/tests/: layer_reference.rs  qnn_probe.rs  transcribe.rs
crates/whisper-backend/tests/fixtures/: reference_tiny_en_jfk.json
docs/: qwen-asr-runtime-decision.md
scripts/: bench-device.sh  build-ios.sh  convert-kotoba-to-ggml.py  convert-nemo-to-gguf.py  convert-to-gguf.py  dump-nemo-fixtures.py  dump_encoder_weights.py  generate_test_fixtures.py  nemo-block-internals-dump.py  nemo-truth-dump.py  nnapi_encoder_debug.c  nnapi_fc_debug.c  nnapi_full_debug.c  nnapi_layer0_debug.c  nnapi_ln_debug.c  nnapi_op_probe.c  nnapi_probe.c  validate-mel.py
