[package]
name = "any-stt"
description = "Cross-platform speech-to-text engine — auto-detects hardware and selects the optimal backend"
readme = "../../README.md"
keywords = ["stt", "speech-to-text", "whisper", "asr", "transcription"]
categories = ["multimedia::audio"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = "2"

[features]
cuda = []
metal = []
coreml = []
vulkan = []
nnapi = []
qnn = []
