[package]
name = "bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bench-whisper"
path = "src/main.rs"

[dependencies]
any-stt = { path = "../any-stt" }
whisper-backend = { path = "../whisper-backend" }
qnn-backend = { path = "../qnn-backend" }
nnapi-backend = { path = "../nnapi-backend" }
gguf-loader = { path = "../gguf-loader" }
hound = "3"

[features]
vulkan = ["whisper-backend/vulkan"]
metal = ["whisper-backend/metal"]
coreml = ["whisper-backend/coreml"]
cuda = ["whisper-backend/cuda"]
