[package]
name = "gguf-loader"
description = "GGUF v3 model parser with zero-copy mmap — F32, F16, Q8_0, Q4_0, Q5_0"
readme = "../../README.md"
keywords = ["gguf", "ggml", "model", "parser", "mmap"]
categories = ["parser-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
memmap2 = "0.9"
