[package]
name = "whisper-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
any-stt = { path = "../any-stt" }
libloading = "0.8"
qnn-backend = { path = "../qnn-backend" }

[dev-dependencies]
hound = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cmake = "0.1"
cc = "1"
