[package]
name = "whisper-backend"
description = "whisper.cpp FFI backend for any-stt — CPU, CUDA, Vulkan, Metal, CoreML, QNN"
readme = "../../README.md"
keywords = ["whisper", "speech-to-text", "ffi", "cuda", "metal"]
categories = ["multimedia::audio", "api-bindings"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
any-stt = { version = "0.1.0", path = "../any-stt" }
gguf-loader = { version = "0.1.0", path = "../gguf-loader" }
libloading = "0.8"
nnapi-backend = { version = "0.1.0", path = "../nnapi-backend" }
qnn-backend = { version = "0.1.0", path = "../qnn-backend" }

[dev-dependencies]
hound = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
vulkan = []
metal = []
coreml = []
cuda = []

[build-dependencies]
cmake = "0.1"
cc = "1"
